focus -> focus-visible

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       height: 3.2rem;
       width: 3.2rem;
     }
-    .enlarge:focus,
+    .enlarge:focus-visible,
     .enlarge:hover,
-    .compress:focus,
+    .compress:focus-visible,
     .compress:hover {
       background-color: #000;
       color: #fff;
